Fixed improper dark mode styling

--- a/style.css
+++ b/style.css
@@ -30,23 +30,17 @@
     }
 
     img[src$="Search.svg"]:not([src*="w_"]) {
-        content: url("/assets/w_Search.svg");
+        content: url("assets/w_Search.svg");
     }
 
     img[src$="ShoppingCart.svg"]:not([src*="w_"]) {
-        content: url("/assets/w_ShoppingCart.svg");
+        content: url("assets/w_ShoppingCart.svg");
     }
 
-    img[src$="arrow_left.svg"]:not([src*="w_"]) {
-        content: url("/assets/w_arrow_left.svg");
-    }
-
-    img[src$="arrow_right.svg"]:not([src*="w_"]) {
-        content: url("/assets/w_arrow_right.svg");
-    }
-
-    img[src$="arrow_drop_down.svg"]:not([src*="w_"]) {
-        content: url("/assets/w_arrow_drop_down.svg");
+    img[src$="arrow_left.svg"],
+    img[src$="arrow_right.svg"],
+    img[src$="arrow_drop_down.svg"] {
+        filter: brightness(0) invert(1);
     }
 }
 
